apps/taulu/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taulu
  namespace: taulu
  labels:
    app: taulu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taulu
  template:
    metadata:
      labels:
        app: taulu
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - image: ghcr.io/jonesus/taulu-api:sha-eca3eb7
          name: taulu
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 2000m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: state
              mountPath: /app/state
      volumes:
        - name: state
          persistentVolumeClaim:
            claimName: taulu-state-pvc
      restartPolicy: Always
