apps/taulu/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taulu
  namespace: taulu
spec:
  selector:
    app: taulu
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
